--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,11 @@
       <version>7.11.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-api</artifactId>
+      <version>4.33.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
